--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <div class="login h-screen bg-white">
-        <div class="h-screen bg-gradient-to-br from-[#0A3A74] via-[#2172C1] to-[#4FB7F3] p-8 border flex justify-center items-center">
+        <div
+            class="h-screen bg-gradient-to-br from-[#0A3A74] via-[#2172C1] to-[#4FB7F3] p-8 border flex justify-center items-center">
             <form action="/login" method="post" class="bg-white w-full max-w-md rounded-[20px] space-y-6 p-10">
                 <h2 class="text-3xl font-semibold text-center">Login</h2>
-                
+
                 <div>
                     <label class="block text-lg mb-1" for="email">Email</label>
                     <input type="text" id="email" name="email" placeholder="Email address"
                         class="w-full border focus:outline-none p-2 text-gray-400 rounded" />
                 </div>
-                
+
                 <div>
                     <label class="block text-lg mb-1" for="password">Password</label>
                     <input type="password" id="password" name="password" placeholder="Password"
                         class="w-full border focus:outline-none rounded p-2 text-gray-400" />
                 </div>
-                
+
                 <div>
                     <button type="submit" class="bg-[#FFD700] w-full p-2 text-lg font-semibold rounded-[10px]">
                         Login
                     </button>
                 </div>
-                
+
                 <div class="flex justify-between px-3">
                     <div class="text-lg">Don't have an account?</div>
                     <div class="text-[#FFD700] font-bold text-lg">
                         <a href="/signup">Sign up</a>
                     </div>
                 </div>
+                <div class="text-center text-red-500 mt-4 text-lg">
+  <% if(error){ %>
+                <div>
+                    <h1>
+                        <%= error %>
+                    </h1>
+                </div>
+                <% } %>
+                </div>
             </form>
-           <% if(error){ %> 
-  <div><h1>
-    <%= error %>
-</h1></div>
-            <% } %>
           
+
         </div>
     </div>
 </body>
+
 </html>
