--- a/backend/views/login.ejs
+++ b/backend/views/login.ejs
@@ -12,7 +12,7 @@
     <div class="login h-screen bg-white">
         <div
             class="h-screen bg-gradient-to-br from-[#0A3A74] via-[#2172C1] to-[#4FB7F3] p-8 border flex justify-center items-center">
-            <form action="/login" method="post" class="bg-white w-full max-w-md rounded-[20px] space-y-6 p-10">
+            <form action="/api/user/login" method="post" class="bg-white w-full max-w-md rounded-[20px] space-y-6 p-10">
                 <h2 class="text-3xl font-semibold text-center">Login</h2>
 
                 <div>
@@ -36,7 +36,7 @@
                 <div class="flex justify-between px-3">
                     <div class="text-lg">Don't have an account?</div>
                     <div class="text-[#FFD700] font-bold text-lg">
-                        <a href="/signup">Sign up</a>
+                        <a href="/">Sign up</a>
                     </div>
                 </div>
                 <div class="text-center text-red-500 mt-4 text-lg">
